# doc-segToolsRev

./: .gitignore  CMakeLists.txt  README
disTiler/: CMakeLists.txt
disTiler/halide/: BlurAOT.cpp  BlurAOT.h  BlurGen.cpp  CMakeLists.txt  PriorityQ.h  autoTiler.cpp  autoTiler.h  distTiling.cpp  distTiling.h  main.cpp
disTiler/tiramisu/: CMakeLists.txt  blur_tir_dist.cpp  blur_tir_serial.cpp
seg-base/: CMakeLists.txt  ConnComponents.cpp  ConnComponents.hpp  Makefile  main.cpp  pixelsOps.cpp  pixelsOps.hpp
seg-halide/: CMakeLists.txt
seg-halide/v1/: CMakeLists.txt  main.cpp
seg-tiramisu/disTiler/: blur_tir.h  main.cpp
